[tool.poetry]
name = "timefusion"
version = "0.1.0"
description = "TimeFusion: Advanced Hybrid Time Series Forecasting System"
authors = ["TimeFusion Contributors <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/timefusion"
documentation = "https://timefusion.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0"
pandas = "^1.3.0"
scikit-learn = "^1.0.0"
matplotlib = "^3.4.0"
statsmodels = "^0.13.0"
seaborn = "^0.12.0"
statsforecast = "^1.4.0"

# Optional dependencies
torch = { version = "^1.10.0", optional = true }
tensorflow = { version = "^2.8.0", optional = true }
optuna = { version = "^2.10.0", optional = true }
plotly = { version = "^5.6.0", optional = true }
jupyter = { version = "^1.0.0", optional = true }
neuralforecast = { version = "^1.5.0", optional = true }
mlforecast = { version = "^0.5.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
nbsphinx = "^0.8.8"

[tool.poetry.extras]
deep = ["torch", "tensorflow"]
viz = ["plotly"]
opt = ["optuna"]
notebook = ["jupyter"]
forecast = ["statsforecast", "neuralforecast", "mlforecast"]
all = ["torch", "tensorflow", "optuna", "plotly", "jupyter", "statsforecast", "neuralforecast", "mlforecast"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88
